# git_job_log

./: README.md  pyproject.toml
src/git_job_log/: __init__.py  cli.py  git_job_log.py  graph_jobs.py  util.py
tests/: conftest.py  test_git.py  test_git_job_log.py  test_graph_jobs.py
